# platform.core.system.resourced

./: CMakeLists.txt  libresourced.pc.in  project.config  resourced.conf  resourced.manifest  resourced.pc.in  resourced.rule  resourced_nodb.manifest  system-resource.pc.in
docs/: func.txt  (+2 more)
src/: CMakeLists.txt
src/app-stat/: app-stat.c  classid-helper.c
src/app-stat/include/: classid-helper.h
src/block/: block-monitor.c  block.c  block.conf  block.conf.in
src/block/include/: block.h
src/cgroup/: cgroup.c
src/common/: app-stat.h  appid-helper.c  appid-helper.h  appinfo-list.c  appinfo-list.h  cgroup.c  cgroup.h  config-parser.c  config-parser.h  config.h.in  const.h  cpu-common.c  cpu-common.h  daemon-options.h  edbus-handler.c  edbus-handler.h  file-helper.c  file-helper.h  filemap.c  filemap.h  genl.h  heart-common.h  logging-common.h  lowmem-common.c  lowmem-common.h  macro.h  meminfo-lookup.gperf  memory-common.h  module-data.c  module-data.h  module.c  module.h  notifier.c  notifier.h  proc-common.h  proc-cpu.c  proc-cpu.h  procfs.c  procfs.h  smaps-lookup.gperf  (+15 more)
src/cpu/: cpu.c  cpu.conf  logging-cpu.c
src/datausage/: counter-process.c  counter.c  daemon-options.c  datausage-common.c  datausage-quota-processing.c  datausage-quota.c  datausage-vconf-callbacks.c  foreach.c  iptables_helper.c  join-local.c  join.c  net-activity.c  notification.c  options.c  reset.c  restriction.c  settings.c  specific-trace.c  storage.c  stub-datausage-API-min.c  stub-datausage-API.c  update.c
src/datausage/include/: counter-process.h  counter.h  daemon-options.h  database.h  datausage-common.h  datausage-foreach.h  datausage-quota-processing.h  datausage-restriction.h  iptables_helper.h  notification.h  settings.h  storage.h
src/freezer/: freezer-common.c  freezer.c  freezer.conf  libsystem-freezer.so.arm  libsystem-freezer.so.arm64  libsystem-freezer.so.armv7l  libsystem-freezer.so.i586  libsystem-freezer.so.x86_64
src/freezer/include/: freezer.h
src/heart/: decision-memory.c  decision.c  dump_heart_data.sh  dump_heart_data.sh.in  heart-abnormal.c  heart-appopt.c  heart-battery.c  heart-cpu.c  heart-memory.c  heart-storage.c  heart.c  heart.conf  logging.c
src/heart/include/: decision-memory.h  decision.h  heart.h  logging.h
src/libresourced/: main.c
src/logging/: logging.c
src/logging/include/: logging.h
src/mem-stress/: CMakeLists.txt  mem-stress.c  mem-stress.service
src/memory/: helper.c  helper.h  logging-memory.c  lowmem-dbus.c  lowmem-handler.c  lowmem-handler.h  lowmem-process.c  lowmem-process.h  memcontrol.c  memcontrol.h  memory.conf  memory_eng.conf  memory_user.conf  stub-memory.c  vmpressure-lowmem-handler.c
src/memps/: CMakeLists.txt  memps.c
src/modules/: memory.c
src/network/: 500.resourced-datausage.patch.sh  500.resourced-datausage.patch.sh.in  CMakeLists.txt  app-stat.c  counter-process.c  counter.c  daemon-options.c  datausage-common.c  datausage-quota-processing.c  datausage-quota.c  datausage-vconf-callbacks.c  datausage-vconf-common.c  db-guard.c  dummy-tethering.c  dummy_roaming.c  foreach.c  generic-netlink.c  iface-cb.c  iface.c  iptables-rule.c  join-dummy.c  join.c  ktgrabber-parser.c  ktgrabber-restriction.c  main.c  net-activity.c  net-cls-cgroup.c  net-cls-release.c  net-restriction.c  network-dummy.c  network.c  network.conf  nf-restriction.c  nfacct-rule.c  nl-helper.c  notification-mobile.c  notification-wearable.c  notification.c  options-private.c  options-public.c  (+14 more)
src/network/include/: app-stat.h  counter.h  database.h  datausage-common.h  datausage-quota-processing.h  datausage-quota.h  datausage-reset.h  datausage-restriction.h  datausage-vconf-callbacks.h  datausage-vconf-common.h  db-guard.h  errors.h  generic-netlink.h  iface-cb.h  iface.h  iptables-rule.h  net-cls-cgroup.h  net-restriction.h  netlink-restriction.h  nfacct-rule.h  nl-helper.h  notification.h  protocol-info.h  restriction-handler.h  restriction-helper.h  roaming.h  settings.h  specific-trace.h  storage.h  telephony.h  tethering-restriction.h  tethering.h
src/powertop-wrapper/: CMakeLists.txt  header.html  powertop-wrapper.cpp  powertop-wrapper.h
src/proc-stat/: CMakeLists.txt  proc-appusage.c  proc-handler.c  proc-info.c  proc-main.c  proc-monitor.c  proc-noti.c  proc-process.c  proc-stat.c  proc-usage-stats-helper.c  proc-usage-stats.c  proc-winstate.c  proc.conf
src/proc-stat/include/: proc-appusage.h  proc-handler.h  proc-info.h  proc-main.h  proc-monitor.h  proc-noti.h  proc-process.h  proc-usage-stats-helper.h  proc-usage-stats.h  proc-winstate.h
src/resourced/: init.c  init.h  main.c  resourced.service  resourced.socket
src/resourced-dbus/: resourced-dbus.c
src/resourced-dbus/include/: resourced-dbus.h
src/sluggish/: sluggish.c
src/swap/: swap-common.c  swap.c  swap.conf
src/test/: CMakeLists.txt  main.c  sluggish-test.c  sluggish-test.conf  test-file-helper.c  test-procfs.c  test-smaps.c  test.c  test.h
src/test/activation/dbus/: CMakeLists.txt  org.tizen.system.resourced-test.service
src/test/activation/systemd/: CMakeLists.txt  resourced-test.service
src/tests/: CMakeLists.txt  README
src/tests/common/: cgroup.c  fio.c  procfs.c
src/tests/cpu/: resourced_cpu_test.c
src/tests/include/: resourced_tests.h  utils.h
src/tests/memory/: Notes  resourced_memory_test.c  resourced_memory_test_helper.c  utils.c
src/tests/memory/include/: resourced_memory_test.h  utils.h
src/tests/network/: resourced_data_usage_test.c
src/tests/proc-stat/: resourced_proc_stat_test.c
src/tests/scripts/: Notes  resourced_dbus_sender.sh  resourced_util_memory_test.sh
src/tests/util/: Notes  resourced_dummy_process.c  resourced_hogger_memory.c
src/timer-slack/: timer-slack.c  timer-slack.conf  timer-slack.h
src/utils/: cgroup-test.c  database.c  datausage-tool.c  hashtest.c  iface-test.c  inodeuser.c  iptables-test.c  monitored.c  portuser.c  proc-stat-test.c  test-net-activity.c  udp-client.c  udp-common.c  udp-common.h  udp-server.c
src/vip-agent/: vip-process.c  vip-process.conf  vip-process.h  vip-release-agent.c
(+40 files in other folders)
