SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed -pie")

IF("${ARCH}" STREQUAL "arm")
    ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")

SET(SOURCES ${MEMPS_SOURCE_DIR}/memps.c)

ADD_EXECUTABLE(memps ${MEMPS_SOURCE_DIR}/memps.c)
INSTALL(TARGETS memps DESTINATION /usr/bin)


