PROJECT(memps)

SET(PREFIX ${CMAKE_INSTALL_PREFIX})

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed -pie")

IF("${ARCH}" STREQUAL "arm")
    ADD_DEFINITIONS("-DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DPREFIX=\"${CMAKE_INSTALL_PREFIX}\"")
ADD_DEFINITIONS("-DSLP_DEBUG")

ADD_EXECUTABLE(${PROJECT_NAME} ${MEMPS_SOURCE_DIR}/memps.c)
TARGET_LINK_LIBRARIES(${PROJECT_NAME} resourced_shared)
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION bin
	PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
	GROUP_READ GROUP_EXECUTE)
